# AZR-CPU

./: .gitignore  AZR.code-workspace  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  simple_azr_demo.py  verify_methods.py
Prompts/: __init__.py  advanced_templates.py  prompt_config.py  prompt_manager.py  solution_prompts.py  solution_prompts_fixed.py  task_generation_prompts.py  validation_prompts.py
data/: README.md
docs/: azr_evaluation_analysis_june2025.md  azr_implementation_analysis.md  azr_model_comparison_analysis.md  iteration_2_summary.md  paper_alignment_analysis.md  second_iteration_progress_report.md
experiments/: README.md
src/: __init__.py  azr_system.py  code_executor.py  model_wrapper.py  reward_calculator.py  task_manager.py
tests/: __init__.py  test_azr_system.py  test_azr_system_updated.py  test_basic.py  test_basic_updated.py  test_model_download.py  test_model_download_updated.py
utils/: __init__.py  analyze_requirements.py  evaluation.py  logging_utils.py  model_manager.py
