[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azr-cpu"
version = "0.1.0"
description = "Absolute Zero Reasoner - Self-bootstrapping reasoning system for CPU"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "reasoning", "reinforcement-learning", "self-bootstrapping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0,<2.5.0",  # CPU-optimized version
    "transformers>=4.30.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "datasets>=2.12.0,<3.0.0",
    "accelerate>=0.20.0,<1.0.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
wandb = ["wandb>=0.15.0"]

[project.urls]
Homepage = "https://github.com/yourusername/azr-cpu"
Repository = "https://github.com/yourusername/azr-cpu"
Documentation = "https://github.com/yourusername/azr-cpu/docs"

[project.scripts]
azr-train = "azr_cpu.main:main"
azr-demo = "azr_cpu.simple_azr_demo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"azr_cpu" = "src"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
